--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,7 +16,7 @@
 .tasks_section {
     margin-top: 3rem;
     background-color: whitesmoke;
-    padding: 2rem;
+    padding: 1rem 2rem 2rem 2rem;
     width: 100%;
     border-radius: 1rem;
 }
@@ -29,5 +29,9 @@
     border-bottom: 1px solid lightgray;
     display: flex;
     justify-content: space-between;
-    padding: 0.5rem;
+    padding: 0.75rem;
+}
+
+.done {
+    text-decoration: line-through;
 }
